Adding resources to add and update Authors
